@@ -54,6 +54,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Speed up Special:UncategorizedPages and Special:Deadendpages (no longer marked
   as slow queries). They now add blank ('','') entries for pages without ANY links
   or categories.
+* Fixed notice when accessing special page without read permission and whitelist
+  is not defined
 
 === API changes in 1.12 ===
 
